[gd_scene load_steps=5 format=3 uid="uid://cir2lf4vpe2tv"]

[ext_resource type="PackedScene" uid="uid://bmd3n7oiftiss" path="res://scenes/game/game_ui/pause_controler.tscn" id="1_fcv4u"]
[ext_resource type="Script" path="res://scenes/game/game_ui.gd" id="1_haa44"]
[ext_resource type="Script" path="res://scenes/game/level_loader.gd" id="5_v2d4l"]

[sub_resource type="Environment" id="Environment_11cwd"]
background_mode = 3
glow_enabled = true
glow_strength = 1.15
glow_blend_mode = 1

[node name="GameUI" type="Control" groups=["game_ui"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_haa44")
main_menu_scene = "res://scenes/menu/main_menu.tscn"

[node name="PauseController" parent="." instance=ExtResource("1_fcv4u")]
script = null

[node name="LevelLoader" type="Node" parent="." node_paths=PackedStringArray("level_container")]
script = ExtResource("5_v2d4l")
level_container = NodePath("../ViewportContainer/SubViewport")
files = Array[String](["res://scenes/game/level/levels.tscn"])
directory = "res://scenes/game/level"

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="ViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="ViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_11cwd")

[connection signal="level_load_started" from="LevelLoader" to="." method="_on_level_loader_level_load_started"]
[connection signal="level_loaded" from="LevelLoader" to="." method="_on_level_loader_level_loaded"]
[connection signal="levels_finished" from="LevelLoader" to="." method="_on_level_loader_levels_finished"]
